# shredword-trainer

./: README.md  pyproject.toml
docs/: UserBPE.md  UserUnigram.md
shredword/: __init__.py  bpe.py  cbase.py  trainer.py  unigram.py
shredword/csrc/: run.cpp  trainer.cpp  trie.cpp  trie.h
shredword/csrc/bpe/: bpe.cpp  heap.cpp  heap.h
shredword/csrc/inc/: normalizer.h  trie.h
shredword/csrc/unigram/: cache.cpp  cache.h  hashmap.cpp  hashmap.h  heap.cpp  heap.h  subword.cpp  subword.h  unigram.cpp  unigram.h  utils.cpp  utils.h
shredword/utils/: bpe.py  utils.py
test/: bpe_test.cpp  test_bpe.py  test_unigram.py
