[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "shredword-trainer"
version = "0.0.2"
description = "BPE & Unigram trainers for Shredword tokenizer"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Shivendra S", email = "shivharsh44@gmail.com"}]
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: C",
  "Programming Language :: C++",
  "Operating System :: OS Independent"
]

[tool.scikit-build]
cmake.source-dir = "."
cmake.build-type = "Release"
cmake.args = ["-G", "Ninja"]
wheel.expand-macos-universal-tags = true
wheel.install-dir = "shredword"
install.components = ["python_modules"]

[tool.scikit-build.cmake.define]
CMAKE_EXPORT_COMPILE_COMMANDS = "ON"
BUILD_SHARED_LIBS = "ON"

[tool.cibuildwheel]
build = "cp311-* cp312-*"
skip = "*-win32 *-manylinux_i686"